@@ -8,9 +8,16 @@ close all windows
 rename category
 
 add a pie chart by category over month
+- budget should maintain categroy totals
+- row.setCategory shoudl remove amount from old cat and add to new cat
 
 add a sub category?
 
+add an account attribute
+
+bug:
+accessible: module javafx.controls does not "opens javafx.scene.control.skin" to unnamed module @17fb3970
+VM arg --add-opens?
 
 
 
